# bevy_blender

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
assets/: demo.blend  robot.blend
examples/: camera.rs  demo.rs
examples/default_materials/: main.rs
examples/material/: main.rs
examples/mesh/: camera.rs  main.rs
examples/object/: main.rs
examples/robot/: main.rs
src/: lib.rs  main.rs  material.rs  mesh.rs  object.rs
