[package]
name = "bevy_blender"
authors = ["Jerald Thomas <jeraldamo@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "bevy_blender is a Bevy library that allows you to use assets created in Blender directly from the .blend file"
readme = "README.md"
repository = "https://github.com/jeraldamo/bevy_blender"
license = "MIT"
keywords = ["gamedev", "bevy", "blender"]
categories = ["game-development"]


[dependencies]
blend = ">=0.6.1"
bevy = "0.7.0"
bevy_app = "0.7.0"
bevy_asset = "0.7.0"
bevy_ecs = "0.7.0"
bevy_render = "0.7.0"
bevy_math = "0.7.0"
bevy_utils = "0.7.0"
bevy_pbr = "0.7.0"
bevy_transform = "0.7.0"
anyhow = ">=1.0"
thiserror = ">=1.0"

[dev-dependencies]

[features]
default = []
